# A1CTF-docker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  a1api.yml  build.sh  config.example.yaml  create_teams.sql  data_maker.py  db.yaml  diesel.toml  docker-compose.yml  go.mod  go.sum  i18n.js  init_db.py  middleware.js  next.config.mjs  openapi.yaml  package-lock.json  package.json  statis_lines.py  version.ts
.vercel/: project.json
clientapp/: README.md  a1api.yml  components.json  i18n.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
components/: A1Anime.tsx  A1Footer.tsx  A1Headers.tsx  A1LogoWithoutAnimation.tsx  A1LogoWithoutAnime.tsx  AboutPage.tsx  AnimatedButton.tsx  CategorySideBar.tsx  ChallengeCard.tsx  ChallengeItem.tsx  ChallengesView.tsx  ChangeEmailView.tsx  ChangeGames.tsx  ClientToaster.tsx  DelayedSuspense.tsx  DownloadBar.tsx  GameChaningLayout.tsx  GameSwitchHover.tsx  GameTerminal.tsx  GameTerminal2.tsx  LoadingPage.tsx  LoginForm.tsx  MainPageAnimation.tsx  MdxCompoents.tsx  NoticesView.tsx  PasswordView.tsx  ProfileView.tsx  RedirectNotice.tsx  RegisterForm.tsx  ResizableScrollablePanel.tsx  SafeComponent.tsx  ScoreBoardPage.tsx  ScoreTable.tsx  SkeletonCard.tsx  SkyBackground.tsx  SolvedAnimation.tsx  TeamsView.tsx  TerminalContent.tsx  ThemeProvider.tsx  ToggleTheme.tsx  (+3 more)
contexts/: GameSwitchContext.tsx  GlobalVariableContext.tsx  TransitionContext.tsx
example/: package-lock.json  package.json
i18n/: admin.en.toml  admin.zh.toml  user.en.toml  user.zh.toml
sql/: down.sql  (+2 more)
(+555 files in other folders)
