[package]
name = "a1ctf"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.6"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
serde_json = "1.0.139"
serde = "1.0.218"
serde_derive = "1.0.218"
rand = "0.9.0"
hex-literal = "1.0.0"
sha2 = "0.10.8"
hex = "0.4.3"


[dependencies.uuid]
version = "1.15.1"
# Lets you generate random UUIDs
features = [
    "v4",
]
