[package]
name = "a1ctf"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.6"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15"
serde_json = "1.0.139"
serde = { version = "1.0.218" }
serde_derive = "1.0.218"
rand = "0.9.0"
hex-literal = "1.0.0"
sha2 = "0.10.8"
hex = "0.4.3"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
actix-jwt-auth-middleware = "0.5.0"
jwt-compact = "0.8.0"
diesel_json = "0.2"
chrono = "0.4.40"
strum = "0.27"
strum_macros = "0.27"

[dependencies.uuid]
version = "1.15.1"
# Lets you generate random UUIDs
features = [
    "v4",
]


[profile.release]
strip = "symbols"
